bazel_dep(name = "rules_rust", version = "0.65.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(package = "nalgebra", version = "0.33.2")
crate.spec(package = "winit", version = "0.30.12")
crate.spec(package = "vulkanalia", version = "0.29.0", features = ["libloading", "provisional", "window"])
crate.spec(package = "anyhow", version = "1.0.75")
crate.from_specs()
use_repo(crate, "crates")
