bazel_dep(name = "rules_rust", version = "0.65.0")
bazel_dep(name = "rules_rust_prost", version = "0.65.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")


llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.6",
    sha256 = {"linux-x86_64": "d55dcbb309de7ade4e3073ec3ac3fac4d3ff236d54df3c4de04464fe68bec531"},
    strip_prefix = {
        "linux-x86_64": "LLVM-19.1.6-Linux-X64",
    },
    urls = {
        "linux-x86_64": [
            "https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.6/LLVM-19.1.6-Linux-X64.tar.xz",
        ],
    },
)

use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
register_toolchains("@rules_rust_prost//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "nalgebra",
    version = "0.33.2",
)
crate.spec(
    package = "prost",
    version = "0.13.1",
)
crate.spec(
    default_features = False,
    package = "prost-types",
    version = "0.13.1",
)
crate.spec(
    package = "winit",
    version = "0.30.12",
)
crate.spec(
    features = [
        "libloading",
        "provisional",
        "window",
    ],
    package = "vulkanalia",
    version = "0.29.0",
)
crate.spec(
    package = "anyhow",
    version = "1.0.75",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.49",
)
crate.from_specs()
use_repo(crate, "crates")
