load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "main",
    srcs = ["main.rs"],
)

rust_library(
  name = "handle",
  srcs = ["handle.rs"]
)

rust_library(
  name = "sparce_buffer",
  srcs = ["sparce_buffer.rs"],
  deps = [
    ":handle"
  ]
)
