load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//client/winit:glsl_compile.bzl", "embed_rs")
load("//client/winit:glsl_compile.bzl", "glsl_to_spirv")
package(default_visibility = ["//visibility:public"])



glsl_to_spirv(
    name = "fragment_shader",
    src = ":shader.frag",
)

glsl_to_spirv(
    name = "vertex_shader",
    src = ":shader.vert",
)

embed_rs(
    name = "rust_vertex_shader",
    src = ":vertex_shader",
    var_name = "VERT_SHADER",
)

embed_rs(
    name = "rust_fragment_shader",
    src = ":fragment_shader",
    var_name = "FRAG_SHADER",
)


rust_library(
    name = "window",
    srcs = ["window.rs"],
    deps = [
        "@crates//:winit",
    ],
)

rust_binary(
    name = "window_example",
    srcs = ["main.rs", ":rust_vertex_shader", ":rust_fragment_shader"],
    deps = [
        ":window",
        "@crates//:winit",
        "@crates//:vulkanalia",
        "@crates//:anyhow",
    ],
)