load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
package(default_visibility = ["//visibility:public"])


rust_library(
    name = "window",
    srcs = ["window.rs"],
    deps = [
        "@crates//:winit",
    ],
)

rust_library(
    name = "vulkan_context",
    srcs = ["vulkan_context.rs"],
    deps = [
        "@crates//:winit",
        "@crates//:vulkanalia",
    ],
)



rust_binary(
    name = "window_example",
    srcs = ["main.rs", ":rust_vertex_shader", ":rust_fragment_shader"],
    deps = [
        ":window",
        "@crates//:winit",
        "@crates//:vulkanalia",
        "@crates//:anyhow",
    ],
)