load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
package(default_visibility = ["//visibility:public"])


rust_library(
    name = "window",
    srcs = ["window.rs"],
    deps = [
        "@crates//:winit",
    ],
)

rust_library(
    name = "vulkan_context",
    srcs = ["vulkan_context.rs"],
    deps = [
        "@crates//:winit",
        "@crates//:vulkanalia",
    ],
)

rust_library(
    name = "vulkan_buffer",
    srcs = ["vulkan_buffer.rs"],
    deps = [
        "@crates//:vulkanalia",
        ":vulkan_context"
    ],
)


rust_library(
    name = "primitives",
    srcs = ["primitives.rs"],
)


rust_binary(
    name = "vulkan_window_main",
    srcs = ["vulkan_window.rs"],
    deps = [
        ":window",
        "@crates//:winit",
        "@crates//:vulkanalia",
        ":vulkan_context",
        "//client/winit/basic_pipeline:pipeline"
    ],
)