load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//client/winit/tools:glsl_compile.bzl", "embed_rs")
load("//client/winit/tools:glsl_compile.bzl", "glsl_to_spirv")
package(default_visibility = ["//visibility:public"])


glsl_to_spirv(
    name = "fragment_shader",
    src = ":shader.frag",
)

glsl_to_spirv(
    name = "vertex_shader",
    src = ":shader.vert",
)

embed_rs(
    name = "rust_vertex_shader",
    src = ":vertex_shader",
    var_name = "VERT_SHADER",
)

embed_rs(
    name = "rust_fragment_shader",
    src = ":fragment_shader",
    var_name = "FRAG_SHADER",
)


rust_library(
    name = "pipeline",
    srcs = ["pipeline.rs",":rust_fragment_shader",":rust_vertex_shader"],
    deps = [
        "@crates//:vulkanalia",
        "@crates//:winit",
        "//client/winit:vulkan_context",
        "//client/winit:vulkan_buffer",
        "//client/winit:primitives",
    ],
)

